fix: SonarCloud code smell by using Stream.toList()